force-app/main/default/objects/Escalation__c/fields/Account_Preference__c.field-meta.xml
<CustomField>
    <fullName>Account_Preference__c</fullName>
    <formula>Case__r.Account_Preference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Preference</label>
    <type>Text</type>
</CustomField>