force-app/main/default/objects/Escalation__c/fields/Account_type__c.field-meta.xml
<CustomField>
    <fullName>Account_type__c</fullName>
    <formula>Case__r.Account_type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account type</label>
    <type>Text</type>
</CustomField>