force-app/main/default/objects/Escalation__c/fields/Activity_Levels__c.field-meta.xml
<CustomField>
    <fullName>Activity_Levels__c</fullName>
    <label>Activity Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily or multiple times per day</fullName>
            </value>
            <value>
                <fullName>2 - 3 times per week</fullName>
            </value>
            <value>
                <fullName>1 time per week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>