force-app/main/default/objects/Escalation__c/fields/Activity_Levels_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Activity_Levels_Temperature__c</fullName>
    <formula>IF( ISPICKVAL(Activity_Levels__c,&apos;Daily or multiple times per day&apos;), IMAGE(&quot;/resource/Activity_Level_Red&quot;, &quot;Red&quot;),
IF (ISPICKVAL(Activity_Levels__c,&apos;2 - 3 times per week&apos;), IMAGE(&quot;/resource/Activity_Level_Yellow&quot;, &quot;Yellow&quot;), 
IF( ISPICKVAL(Activity_Levels__c, &apos;1 time per week&apos;) , IMAGE(&quot;/resource/Activity_Level_Green&quot;, &quot;Green&quot;), &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Levels Temperature</label>
    <type>Text</type>
</CustomField>