force-app/main/default/objects/Escalation__c/fields/Affected_Node__c.field-meta.xml
<CustomField>
    <fullName>Affected_Node__c</fullName>
    <label>Affected Node</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>