force-app/main/default/objects/Escalation__c/fields/AHA_reference__c.field-meta.xml
<CustomField>
    <fullName>AHA_reference__c</fullName>
    <label>AHA reference</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>