force-app/main/default/objects/Escalation__c/fields/Assist_Request_Raised__c.field-meta.xml
<CustomField>
    <fullName>Assist_Request_Raised__c</fullName>
    <label>Assist Request Raised</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>