force-app/main/default/objects/Escalation__c/fields/Attack_vector__c.field-meta.xml
<CustomField>
    <fullName>Attack_vector__c</fullName>
    <label>Attack vector</label>
    <type>TextArea</type>
</CustomField>