force-app/main/default/objects/Escalation__c/fields/Attacker_RSC_Logon_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Attacker_RSC_Logon_Attempted__c</fullName>
    <label>Attacker RSC Logon Attempted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>