force-app/main/default/objects/Escalation__c/fields/CDM_version_time_of_attack__c.field-meta.xml
<CustomField>
    <fullName>CDM_version_time_of_attack__c</fullName>
    <label>CDM version (time of attack)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>