force-app/main/default/objects/Escalation__c/fields/Cluster_Stats_SentryAI_URL__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Stats_SentryAI_URL__c</fullName>
    <formula>Case__r.SentryAI_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster Stats/SentryAI URL</label>
    <type>Text</type>
</CustomField>