force-app/main/default/objects/Escalation__c/fields/Cluster_UUID__c.field-meta.xml
<CustomField>
    <fullName>Cluster_UUID__c</fullName>
    <formula>Case__r.Cluster__r.uuid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster UUID</label>
    <type>Text</type>
</CustomField>