force-app/main/default/objects/Escalation__c/fields/Current_Rubrik_CDM_version__c.field-meta.xml
<CustomField>
    <fullName>Current_Rubrik_CDM_version__c</fullName>
    <formula>TEXT(Case__r.Software_Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rubrik CDM version</label>
    <type>Text</type>
</CustomField>