force-app/main/default/objects/Escalation__c/fields/Custom_Threat_Feeds_IOC__c.field-meta.xml
<CustomField>
    <fullName>Custom_Threat_Feeds_IOC__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>Custom Threat Feeds IOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>