force-app/main/default/objects/Escalation__c/fields/Customer_impact_and_current_status__c.field-meta.xml
<CustomField>
    <fullName>Customer_impact_and_current_status__c</fullName>
    <label>Customer impact and current status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>