force-app/main/default/objects/Escalation__c/fields/Customer_Preparedness__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preparedness__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>Customer Preparedness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very prepared</fullName>
            </value>
            <value>
                <fullName>Somewhat prepared</fullName>
            </value>
            <value>
                <fullName>Not prepared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>