force-app/main/default/objects/Escalation__c/fields/Customer_Recovery_Ops_started__c.field-meta.xml
<CustomField>
    <fullName>Customer_Recovery_Ops_started__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>Customer Recovery Ops started</label>
    <type>DateTime</type>
</CustomField>