force-app/main/default/objects/Escalation__c/fields/Customer_temperature__c.field-meta.xml
<CustomField>
    <fullName>Customer_temperature__c</fullName>
    <label>Customer temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Cool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>