force-app/main/default/objects/Escalation__c/fields/Data_Loss__c.field-meta.xml
<CustomField>
    <fullName>Data_Loss__c</fullName>
    <label>Data Loss?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Partial</fullName>
            </value>
            <value>
                <fullName>Yes - Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>