force-app/main/default/objects/Escalation__c/fields/Disengagement_date__c.field-meta.xml
<CustomField>
    <fullName>Disengagement_date__c</fullName>
    <label>Disengagement date</label>
    <type>DateTime</type>
</CustomField>