force-app/main/default/objects/Escalation__c/fields/Escalation_contributing_factors__c.field-meta.xml
<CustomField>
    <fullName>Escalation_contributing_factors__c</fullName>
    <label>Escalation contributing factors</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>