force-app/main/default/objects/Escalation__c/fields/Escalation_Manager_Owner__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Manager_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation Manager Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>