force-app/main/default/objects/Escalation__c/fields/Escalation_Ransomware_Number__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Ransomware_Number__c</fullName>
    <formula>IF( RecordType.Name == &apos;Escalation Ransomware&apos;, &apos;ER-&apos;+ TEXT(ABS(VALUE(RIGHT( Name , (FIND(&apos;-&apos;, Name) + 6) )))), &apos;&apos;)</formula>
    <label>Escalation Ransomware Number</label>
    <type>Text</type>
</CustomField>