force-app/main/default/objects/Escalation__c/fields/Escalation_Support_Number__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Support_Number__c</fullName>
    <formula>IF( RecordType.Name == &apos;Escalation Support&apos;, &apos;ES-&apos;+ TEXT(ABS(VALUE(RIGHT( Name , (FIND(&apos;-&apos;, Name) + 6) )))), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Support Number</label>
    <type>Text</type>
</CustomField>