force-app/main/default/objects/Escalation__c/fields/Forensics_Age__c.field-meta.xml
<CustomField>
    <fullName>Forensics_Age__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <formula>( RRT_Forensic_completed_date__c - Initial_engagement_date__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forensics Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>