force-app/main/default/objects/Escalation__c/fields/Initial_engagement_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_engagement_date__c</fullName>
    <label>Initial engagement date</label>
    <type>DateTime</type>
</CustomField>