force-app/main/default/objects/Escalation__c/fields/Insight_Id__c.field-meta.xml
<CustomField>
    <fullName>Insight_Id__c</fullName>
    <label>Insight Id</label>
    <type>TextArea</type>
</CustomField>