force-app/main/default/objects/Escalation__c/fields/is_there_a_relevant_insight_in_SentryA__c.field-meta.xml
<CustomField>
    <fullName>is_there_a_relevant_insight_in_SentryA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is there a relevant insight in SentryA</label>
    <type>Checkbox</type>
</CustomField>