force-app/main/default/objects/Escalation__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Edition</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Enterprise Proactive Edition</fullName>
            </value>
            <value>
                <fullName>Foundation Edition</fullName>
            </value>
            <value>
                <fullName>Trial License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>