force-app/main/default/objects/Escalation__c/fields/Next_Executive_Update_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Executive_Update_Due__c</fullName>
    <label>Next Executive Update Due</label>
    <type>DateTime</type>
</CustomField>