force-app/main/default/objects/Escalation__c/fields/Radar_alert_summary__c.field-meta.xml
<CustomField>
    <fullName>Radar_alert_summary__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>Anomaly Detection alert summary</label>
    <type>TextArea</type>
</CustomField>