force-app/main/default/objects/Escalation__c/fields/Ransom_paid__c.field-meta.xml
<CustomField>
    <fullName>Ransom_paid__c</fullName>
    <label>Ransom paid?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not disclosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>