force-app/main/default/objects/Escalation__c/fields/Ransomware_Strain__c.field-meta.xml
<CustomField>
    <fullName>Ransomware_Strain__c</fullName>
    <label>Ransomware Strain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>