force-app/main/default/objects/Escalation__c/fields/Recommendation_Next_Steps_Provided__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Next_Steps_Provided__c</fullName>
    <label>Recommendation/Next Steps Provided</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>