force-app/main/default/objects/Escalation__c/fields/Recovered_Age__c.field-meta.xml
<CustomField>
    <fullName>Recovered_Age__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <formula>( Recovered_RRT_Disengaged__c - Customer_Recovery_Ops_started__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recovered Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>