force-app/main/default/objects/Escalation__c/fields/Recovered_RRT_Disengaged__c.field-meta.xml
<CustomField>
    <fullName>Recovered_RRT_Disengaged__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>Recovered/RRT Disengaged</label>
    <type>DateTime</type>
</CustomField>