force-app/main/default/objects/Escalation__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations1</relationshipName>
    <type>Lookup</type>
</CustomField>