force-app/main/default/objects/Escalation__c/fields/Retention_Lock__c.field-meta.xml
<CustomField>
    <fullName>Retention_Lock__c</fullName>
    <label>Retention Lock?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>