force-app/main/default/objects/Escalation__c/fields/RRT_Forensic_completed_date__c.field-meta.xml
<CustomField>
    <fullName>RRT_Forensic_completed_date__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>RRT Forensic completed date</label>
    <type>DateTime</type>
</CustomField>