force-app/main/default/objects/Escalation__c/fields/Situation_Type__c.field-meta.xml
<CustomField>
    <fullName>Situation_Type__c</fullName>
    <label>Situation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical Situation</fullName>
            </value>
            <value>
                <fullName>Stable Situation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>