force-app/main/default/objects/Escalation__c/fields/Slack_channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_channel__c</fullName>
    <formula>Case__r.Slack_channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slack channel</label>
    <type>Text</type>
</CustomField>