force-app/main/default/objects/Escalation__c/fields/Support_Tunnel__c.field-meta.xml
<CustomField>
    <fullName>Support_Tunnel__c</fullName>
    <formula>Case__r.Support_Tunnel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Tunnel</label>
    <type>Text</type>
</CustomField>