force-app/main/default/objects/Escalation__c/fields/Threat_hunter_enabled__c.field-meta.xml
<CustomField>
    <fullName>Threat_hunter_enabled__c</fullName>
    <label>Threat hunter enabled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - Trial License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>