force-app/main/default/objects/Escalation__c/fields/Threat_hunter_IOC__c.field-meta.xml
<CustomField>
    <fullName>Threat_hunter_IOC__c</fullName>
    <label>Threat hunter IOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>