force-app/main/default/objects/Escalation__c/fields/Turbo_Threat_Hunter_enabled__c.field-meta.xml
<CustomField>
    <fullName>Turbo_Threat_Hunter_enabled__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>Turbo Threat Hunter enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>