force-app/main/default/objects/Escalation__c/fields/Turbo_Threat_Hunter_IOC__c.field-meta.xml
<CustomField>
    <fullName>Turbo_Threat_Hunter_IOC__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>Turbo Threat Hunter IOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>