force-app/main/default/objects/Escalation__c/fields/X3rd_Party_Cyber_Security_Vendor__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Cyber_Security_Vendor__c</fullName>
    <description>CS21-2836: Escalation Management Team (EMT): Ransomware attack/recovery tracking with enhanced granular timeline reporting</description>
    <label>3rd Party Cyber Security Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>