force-app/main/default/objects/Escalation__c/recordTypes/Escalation_Ransomware.recordType-meta.xml
<RecordType>
    <fullName>Escalation_Ransomware</fullName>
    <active>true</active>
    <label>Escalation Ransomware</label>
</RecordType>