force-app/main/default/objects/Escalation__c/recordTypes/Escalation_Support.recordType-meta.xml
<RecordType>
    <fullName>Escalation_Support</fullName>
    <active>true</active>
    <label>Escalation Support</label>
</RecordType>