force-app/main/default/objects/Escalation__c/validationRules/Insight_Id_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Insight_Id_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(is_there_a_relevant_insight_in_SentryAI__c, ISBLANK( Insight_Id__c ))</errorConditionFormula>
    <errorDisplayField>Insight_Id__c</errorDisplayField>
    <errorMessage>Please fill Insight Id</errorMessage>
</ValidationRule>