force-app/main/default/objects/Escalation__c/listViews/Escalation_Ransomware.listView-meta.xml
<ListView>
    <fullName>Escalation_Ransomware</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Escalation_Manager_Owner__c</columns>
    <columns>Attack_vector__c</columns>
    <columns>Case__c</columns>
    <columns>Case_Priority__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Customer_Geo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Escalation__c.Escalation_Ransomware</value>
    </filters>
    <label>Escalation Ransomware</label>
</ListView>